add getbatchmessage interface
