# src/main/java/com/allstar/nmsc/PathHandlerProvider.java
@@ -4,11 +4,11 @@ package com.allstar.nmsc;
 import io.undertow.Handlers;
 import io.undertow.server.HttpHandler;
 import io.undertow.util.Methods;
-
 import com.allstar.nmsc.handler.ExtMessageAppendHandler;
 import com.allstar.nmsc.handler.ExtMessageRemoveHandler;
 import com.allstar.nmsc.handler.ExtMessageUpdateHandler;
 import com.allstar.nmsc.handler.ExtMessageUpdateOneHandler;
+import com.allstar.nmsc.handler.MessageGetBatchHandler;
 import com.allstar.nmsc.handler.MessageGetHandler;
 import com.allstar.nmsc.handler.MessageInsertHandler;
 import com.allstar.nmsc.handler.MessageSessionUpdateHandler;
@@ -19,6 +19,7 @@ public class PathHandlerProvider implements HandlerProvider {
     public HttpHandler getHandler() {
         return Handlers.routing()
 	        .add(Methods.POST, "/v1/getmessage", new MessageGetHandler())
+	        .add(Methods.POST, "/v1/getbatchmessage", new MessageGetBatchHandler())
 	        .add(Methods.POST, "/v1/addmessage", new MessageInsertHandler())
 	        .add(Methods.POST, "/v1/deletemessage", new MessageSessionUpdateHandler())
 	        .add(Methods.POST, "/v1/extmessageremove", new ExtMessageRemoveHandler())
