# src/main/resources/config/openapi.json
@@ -70,6 +70,7 @@
             }
         },
         "/pets/{petId}": {
+        	"get":{}
         },
         "/server/info": {
             "get": {
@@ -105,6 +106,9 @@
                 },
                 "parameters": []
             }
+        },
+         "/getbatchmessage": {
+        	"post":{}
         },
         "/addmessage": {
         	"post":{}
